tests/sksl/errors/ReservedNameAtomic.glsl
### Compilation failed:

error: 1: name 'atomic' is reserved
int atomic;
    ^^^^^^
1 error
